--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="cambiar aceite coche, aceite coche, filtro aceite coche">
   <link rel="canonical" href="https://www.example.com/como-cambiar-aceite-coche">
   <link rel="stylesheet" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5655686529347797"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Cómo cambiar el aceite del coche</h1>
