--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
   <ul>
     <li>Es importante utilizar el aceite de motor y el filtro de aceite adecuados para tu coche. Puedes consultar el manual del propietario para obtener más información.</li>
     <li>Si el aceite viejo está muy sucio, es posible que necesites cambiarlo con más frecuencia.</li>
-    <li>Es importante que el filtro de aceite esté bien apretado para evitar fugas
+    <li>Es importante que el filtro de aceite esté bien apretado para evitar fugas.</li>
 
-        <a href="https://tutotortilla.vercel.app/">Otro Tutorial de interes Tortilla de patatas</a>ssss
+        <a href="https://tutotortilla.vercel.app/">Otro Tutorial de interes Tortilla de patatas</a>
